--- a/css/style.css
+++ b/css/style.css
@@ -560,7 +560,7 @@ img {
     gap: 24px;
 }
 
-.paragraph-email {
+.paragraph-email-label {
     border: 1px solid #ffffff;
     border-radius: 4px;
     width: 264px;
