--- a/css/style.css
+++ b/css/style.css
@@ -629,6 +629,8 @@ img {
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background-color: #fcfcfc;
     padding: 72px 24px 24px 24px;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-open {
@@ -645,10 +647,27 @@ img {
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
     cursor: pointer;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+     border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
     
 }
  
- 
+ .modal-open:hover {
+    background-color: #404bbf; 
+    border: none;
+    fill: #ffffff
+ }
+
+ .modal-open:focus {
+    background-color: #404bbf; 
+    border: none;
+    fill: #ffffff
+ }
+
+ .btn-icon-close {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
 
 .modal-title {
     font-weight: 500;
