--- a/css/style.css
+++ b/css/style.css
@@ -687,15 +687,18 @@ img {
 }
 
 .modal-field {
-    margin-bottom: 8px;
+    margin-bottom: 16px
 }
 
 .modal-label {
+    display: block;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
+    margin-bottom: 4px; 
 }
 
 .input-container {
@@ -741,17 +744,59 @@ img {
     top: 50%;
     left: 16px;
     transform: translateY(-50%);
+    transition:
+     fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+
+.modal-cube:hover {
+    background-color: #404bbf;
+    border: none;
+    fill: #F4F4FD;
+}
 
 .modal-class {
     display: block;
     outline: transparent;
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
+    margin-bottom: 24px;
+}
+
+.modal-input-comment {
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+    transition: 
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-policy {
     margin-bottom: 24px;
 }
 
@@ -763,10 +808,14 @@ img {
 }
 
 .modal-cube {
-    width: 16;
-    height: 16;
-    border-radius: 2px;
+    width: 16px;
+    height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     fill: transparent;
 }
 
@@ -775,20 +824,25 @@ img {
     top: 50%;
     left: 16px;
     transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
 .modal-letter {
+    display: block;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    text-align: center
-    ;
+    text-align: center;
+    border: none; 
     color: #fff;
     border-radius: 4px;
     padding: 16px 32px;
-    width: 169px;
+    min-width: 169px;
     height: 56px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    transition:
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
     background: #4d5ae5;
 }
