--- a/css/style.css
+++ b/css/style.css
@@ -687,7 +687,7 @@ img {
 }
 
 .modal-field {
-    margin-bottom: 16px
+    margin-bottom: 8px
 }
 
 .modal-label {
@@ -748,6 +748,10 @@ img {
      fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
+.modal-icon:focus {
+    fill: #4D5AE5;
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -794,6 +798,10 @@ img {
     resize: none;
     transition: 
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input-comment:focus {
+    border-color: #4D5AE5; 
 }
 
 .modal-policy {
