--- a/css/style.css
+++ b/css/style.css
@@ -615,9 +615,18 @@ img {
     position: fixed;
     top: 0;
     left: 0;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
     background-color:  rgba(46, 47, 66, 0.4);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.ist-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 }
 
 .modal {
@@ -687,7 +696,7 @@ img {
 }
 
 .modal-field {
-    margin-bottom: 8px
+    margin-bottom: 16px
 }
 
 .modal-label {
@@ -745,7 +754,7 @@ img {
     left: 16px;
     transform: translateY(-50%);
     transition:
-     fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+     250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .modal-icon:focus {
@@ -849,6 +858,7 @@ img {
     padding: 16px 32px;
     min-width: 169px;
     height: 56px;
+    margin: 0 auto;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     transition:
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
