--- a/css/style.css
+++ b/css/style.css
@@ -712,6 +712,7 @@ img {
 
 .input-container {
     position: relative;
+    margin-bottom: 8px;
 }
 
 .modal-input {
@@ -753,13 +754,11 @@ img {
     top: 50%;
     left: 16px;
     transform: translateY(-50%);
-    transition:
-     250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: fill 250ms 
+    cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-.modal-icon:focus {
-    fill: #4D5AE5;
-}
+
 
 .visually-hidden {
     position: absolute;
