--- a/css/style.css
+++ b/css/style.css
@@ -746,8 +746,7 @@ img {
 .modal-input:hover,
 .modal-input:focus,
 .modal-input:active {
-    
-    fill: #4D5AE5;
+    border: 1px solid #4d5ae5;
 }
 
 .modal-icon {
@@ -841,7 +840,11 @@ img {
     top: 50%;
     left: 16px;
     transform: translateY(-50%);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-policy-icon:focus {
+    fill: #4D5AE5; 
 }
 
 
