--- a/css/style.css
+++ b/css/style.css
@@ -817,8 +817,7 @@ img {
     border-color: #4D5AE5; 
 }
 
-.visually-hidden:focus+
-.modal-policy-icon {
+.visually-hidden:focus+ .modal-policy-icon {
     fill: #4D5AE5;
 }
 
