--- a/css/style.css
+++ b/css/style.css
@@ -726,6 +726,10 @@ img {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-input:focus+ .modal-icon {
+    fill: #4D5AE5;
+}
+
 .modal-input-comment {
     width: 100%;
     height: 120px;
@@ -758,6 +762,9 @@ img {
     cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
+.block {
+    margin-bottom: 16px;
+}
 
 .visually-hidden {
     border-color: #4D5AE5; 
@@ -802,9 +809,6 @@ img {
     border-color: #4D5AE5; 
 }
 
-.modal-input:focus + .modal-icon {
-    fill: #4D5AE5;
-}
 
 .modal-policy {
     margin-bottom: 24px;
