--- a/css/style.css
+++ b/css/style.css
@@ -730,7 +730,7 @@ img {
     fill: #4D5AE5;
 }
 
-.text-area {
+.modal-comment-area {
     width: 100%;
     height: 120px;
     font-size: 12px;
@@ -786,7 +786,7 @@ img {
     margin-bottom: 24px;
 }
 
-.text-area {
+.modal-comment-area {
     width: 100%;
     height: 120px;
     font-size: 12px;
@@ -803,7 +803,7 @@ img {
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.text-area:focus {
+.modal-comment-area:focus {
     border-color: #4D5AE5; 
 }
 
